# Mandelbrot-with-GL

./: CMakeLists.txt  Makefile  README.md
src/: main.c
src/shaders/: mandelbrot.frag  mandelbrot.vert
